--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "muri-dev",
   "private": true,
+  "packageManager": "pnpm@10.27.0",
   "version": "0.1.0",
   "description": "Development workspace for muri",
   "scripts": {
